k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: commodity-crowdfunding-service
  labels:
    app: commodity-crowdfunding
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: commodity-crowdfunding
